--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -129,10 +129,6 @@ table tbody td a:hover{
     text-decoration: underline;
 }
 
-table tbody tr:hover td {
-    background-color: #FFFAF0; color: #000;
-}
-
 a.editar, a.excluir{
     background: transparent url(../../image/admin/editar.png) no-repeat 0 0;
     width: 12px;
@@ -153,6 +149,10 @@ table tbody tr:nth-child(odd){
 
 table tbody tr:nth-child(even){
     background-color: #eee;
+}
+
+table tbody tr:hover {
+    background-color: #FFFAF0; color: #000;
 }
 
 .list{
@@ -221,3 +221,26 @@ div.error, div.ok{
     margin-right:5px;
     border:1px solid #999;
 }
+
+.ui-datepicker{
+    background-color: #000;
+    border:1px solid #999;
+    color: #fff;
+}
+
+.ui-datepicker table{
+    border:0;
+    background-color:#fff;
+}
+
+.ui-datepicker table tr:nth-child(even), .ui-datepicker table tr:nth-child(odd), .ui-datepicker table tr:hover{ background: none; }
+.ui-datepicker table tr td{ border:1px solid #999; width: 12px; text-align: center; }
+.ui-datepicker table tr td:hover{ background-color: #008fc7;}
+.ui-datepicker table tr td:hover a{ color:#fff; }
+.ui-datepicker table a{ color: #666; }
+.ui-datepicker-header{ padding: 5px; height: 20px;}
+.ui-datepicker-prev{ float:left; margin-right: 10px; cursor: pointer;}
+.ui-datepicker-next{ float:right; cursor: pointer;}
+.ui-datepicker-title{ float: left;}
+.ui-datepicker .ui-datepicker-current-day{ background-color: #000;}
+.ui-datepicker .ui-datepicker-current-day a{color:#fff;}
