--- a/public/css/common/jquery.jgrowl.css
+++ b/public/css/common/jquery.jgrowl.css
@@ -5,6 +5,10 @@ div.jGrowl {
 	font-size: 			12px;
 }
 
+div.jGrowl a{	
+	color: 				#fff;
+}
+
 /** Special IE6 Style Positioning **/
 div.ie6 {
 	position: 			absolute;
@@ -93,8 +97,10 @@ div.jGrowl div.jGrowl-notification, div.jGrowl div.jGrowl-closer {
 	font-size: 				1em;
 	text-align: 			left;
 	display: 				none;
+        border-radius: 	5px;
 	-moz-border-radius: 	5px;
 	-webkit-border-radius:	5px;
+	-o-border-radius:	5px;
 }
 
 div.jGrowl div.jGrowl-notification {
