--- a/public/css/common/jquery.jgrowl.css
+++ b/public/css/common/jquery.jgrowl.css
@@ -134,10 +134,15 @@ div.jGrowl div.jGrowl-closer {
 	text-align: 			center;
 }
 
+div.jGrowl div.jGrowl-notification{
+        box-shadow:#666 5px 5px 5px;
+}
+
 div.jGrowl div.aniversariantes {
         background-color: #fff;
         color:#000;
         border: 1px solid #008fc7;
+        box-shadow:#999 1px 1px 1px;
 }
 
 /** Hide jGrowl when printing **/
