--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -18,11 +18,13 @@ h1.logo{
 	background: url('../../image/site/sprite.png') no-repeat 0 -18px;
 }
 
-a.editar, a.excluir, a.download, a.active, a.preview{ background: transparent url(../../image/admin/editar.png) no-repeat 0 0; width: 12px; height: 12px; float:left; text-indent: -5000px; margin:0 5px; }
+a.editar, a.excluir, a.download, a.active, a.preview, a.excluir_todos{ background: transparent url(../../image/admin/editar.png) no-repeat 0 0; width: 12px; height: 12px; float:left; text-indent: -5000px; margin:0 5px; }
 a.excluir{ background: transparent url(../../image/admin/excluir.png) no-repeat 0 0; }
 a.download{ background: transparent url(../../image/admin/download.png) no-repeat 0 0; }
 a.active{ background: transparent url(../../image/admin/active.png) no-repeat 0 0; }
 a.preview{ background: transparent url(../../image/admin/preview.png) no-repeat 0 0; width: 16px; height: 16px; }
+a.excluir_todos{ background: transparent url(../../image/admin/excluir.png) no-repeat 0 0; padding-left: 17px; text-indent: 0; width: auto; color:#000; line-height: 12px; float:none; display:block; cursor: pointer;}
+a.excluir_todos:hover{color:#666; font-weight: bold;}
 
 .floatNone{ float: none !important; display: inline-block;}
 
@@ -308,3 +310,6 @@ table tbody td table tbody tr:hover {
 .lightbox{ display: block; background-color:#ddd; border-radius:5px; box-shadow:#999 5px 5px 15px; padding:10px; position: relative; }
 .lightbox #btFechar{ position: absolute; top:-20px; right:0; cursor: pointer;}
 .lightbox video{ background-color:#000; }
+
+.dhtml{ display: block; background-color:#fff; border-radius:5px; box-shadow:#999 5px 5px 15px; padding:10px; position: relative; }
+.dhtml input[type='text']{ border:1px #CCC solid; padding:5px; box-shadow:#ccc 1px 1px 3px; display: block; margin: 10px 0; width: 250px; }
