--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -6,7 +6,7 @@
 	margin:0;
 }
 body{
-	background: url('../../image/site/sprite.png') repeat-x 0 -270px;
+	/*background: url('../../image/site/sprite.png') repeat-x 0 -270px;*/
 }
 
 h1.logo{
@@ -33,12 +33,19 @@ a.excluir_todos:hover{color:#666; font-weight: bold;}
 
 .floatNone{ float: none !important; display: inline-block;}
 
+.separator{
+	display:block;
+	border-bottom:1px #CCC solid;
+	padding-bottom:10px;
+	margin-bottom:10px;
+}
+
 .round{
-    -o-border-radius: 6px;
-    -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
-    -khtml-border-radius: 6px;
-    border-radius: 6px;
+    -o-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -khtml-border-radius: 4px;
+    border-radius: 4px;
 }
 
 #user_info{
@@ -48,6 +55,7 @@ a.excluir_todos:hover{color:#666; font-weight: bold;}
 	padding:10px;
 	margin-bottom:5px;
         line-height: 25px;
+    box-shadow:#999 0 2px 5px;    
 }
 
 #user_info img{
@@ -265,11 +273,10 @@ label
 }
 
 .hist_task{
-    background:#ddd;
     padding:10px;
     margin:5px;
     width: 400px;
-    /*border: 1px solid #666;*/
+    border: 1px solid #CCC;
     /*box-shadow:#999 2px 2px 2px;*/
 }
 
