--- a/public/css/admin/login.css
+++ b/public/css/admin/login.css
@@ -1,6 +1,6 @@
 body
 {
-	/*background: #93AAB0 fixed url("../../image/common/.gif") no-repeat right 100% !important;*/
+	background-position:top;
 }
 
 #login{
