--- a/public/css/common/jquery.jgrowl.css
+++ b/public/css/common/jquery.jgrowl.css
@@ -136,13 +136,12 @@ div.jGrowl div.jGrowl-closer {
 }
 
 div.jGrowl div.jGrowl-notification{
-        box-shadow:#666 5px 5px 5px;
+        border: 1px solid #333;
+        box-shadow:#999 1px 1px 1px;
 }
 
 div.jGrowl div.aniversariantes {
-        background-color: #fff;
-        color:#000;
-        border: 1px solid #008fc7;
+        color:#FFF;
         box-shadow:#999 1px 1px 1px;
 }
 
