--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -81,8 +81,8 @@ a.link:hover{color:#666; text-decoration: underline;}
 }
 
 #user_info{
-	/*background:#000;*/
-	background: transparent url(../../image/admin/bg_menu.jpg);
+	background:#008fc7;
+	/*background: transparent url(../../image/admin/bg_menu.jpg);*/
 	color:#FFF;
 	overflow:hidden;
     line-height: 25px;
@@ -114,13 +114,13 @@ a.link:hover{color:#666; text-decoration: underline;}
 }
 
 #menu{
-	background: -webkit-linear-gradient(top, #008fc7, #06608d, #06608d);
-	/*background: #008fc7;*/
+	/*background: -webkit-linear-gradient(top, #008fc7, #06608d, #06608d);*/
+	background: #28282e;
 	padding:10px;
 	padding-left:100px;
 	color:#FFF;
 	height: 25px;
-    box-shadow:0 2px 6px 2px rgba(0,0,0, .4);
+    /*box-shadow:0 2px 6px 2px rgba(0,0,0, .4);*/
 }
 
 #menu ul li{
@@ -192,7 +192,7 @@ a{
 
 
 .bar_button{
-	background:#7ec353;
+	background:#008fc7;
 	padding:5px;
 	margin-right:5px;
 	color:#FFF;
@@ -396,7 +396,8 @@ label
 
 .box{
 	padding: 10px;
-	margin-top: 10px;
+	margin-top: 5px;
+	background: #eee;
 }
 
 .boxwired{
