--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -80,6 +80,15 @@ a.link:hover{color:#666; text-decoration: underline;}
     border-radius: 4px;
 }
 
+.roundtip{
+	-o-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -khtml-border-radius: 20px;
+	border-radius:20px;
+	font-size: 10px;
+}
+
 .roundTop{
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -647,6 +656,7 @@ input[type='text']:focus, input[type='password']:focus{
 	padding:5px;
 	margin-right:5px;
 	color:#FFF;
+	text-align: center;
 }
 
 .task_started{
@@ -654,6 +664,7 @@ input[type='text']:focus, input[type='password']:focus{
 	padding:5px;
 	margin-right:5px;
 	color:#000;
+	text-align: center;
 }
 
 .task_finished{
@@ -661,6 +672,7 @@ input[type='text']:focus, input[type='password']:focus{
 	padding:5px;
 	margin-right:5px;
 	color:#000;
+	text-align: center;
 }
 
 .description{
