--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -4,6 +4,7 @@
 	text-decoration:none;
 	padding:0;
 	margin:0;
+	outline: 0;
 }
 body{
 	background: url('../../image/admin/bkg.jpg') repeat-x 0 70px fixed;
@@ -89,7 +90,7 @@ a.link:hover{color:#666; text-decoration: underline;}
 	font-size: 10px;
 }
 
-.roundTop{
+.roundTop{anexos
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
@@ -122,6 +123,16 @@ a.link:hover{color:#666; text-decoration: underline;}
 	box-shadow: 0 0 10px 1px rgba(0,0,0, .8);
 	top:-17px;
 	left:-17px;
+}
+
+.foto_form{
+	width:100px;
+	height: 100px;
+	background:#CCC no-repeat 10px 10px;
+	position:relative;
+	border:3px #FFF solid;
+	border-radius:100px;
+	box-shadow: 0 0 10px 1px rgba(0,0,0, .8);
 }
 
 #head{
@@ -467,7 +478,16 @@ label
 .ui-datepicker-title{ float: left;}
 .ui-datepicker .ui-datepicker-today{ background-color: #009f9f;}
 
-#filelist div{ border:1px outset #eee; padding: 5px 10px; margin: 5px 0; display: block; border-radius:2px; box-shadow:#999 2px 2px 2px; word-wrap: break-word; width: 480px; }
+#filelist div{ 
+	border:1px outset #eee; 
+	padding: 5px 10px; 
+	margin: 5px 0; 
+	display: block; 
+	border-radius:2px; 
+	box-shadow:#999 2px 2px 2px; 
+	word-wrap: break-word; 
+	width: 480px; 
+}
 #filelist div b{ color:#008fc7; }
 #filelist div:nth-child(odd){ background-color: #fff; }
 #filelist div:nth-child(even){ background-color: #eee; }
@@ -742,3 +762,11 @@ input[type='text']:focus, input[type='password']:focus{
 	background: #fdfdc3;
 }
 
+.ui-widget-header .ui-state-default.ui-state-active{
+	background: #f6f6f6;
+	border: 1px solid #f6f6f6;
+}
+
+.ui-widget-header .ui-state-default{
+	background: #fff;
+}
